# ai-lectures

./: .gitignore  README.md
llm_in_prod/: vllm_dev.ipynb
llm_lora/: README.md  backpropagation_dev.ipynb  lora_dev.ipynb  lora_w_unsloth.ipynb
llm_train/: README.md
lm_audio/: README.md  lm_audio_dev.ipynb  pyproject.toml  voice_clone.py
