[project]
name = "tts-ita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.3.0",
    "librosa>=0.11.0",
    "nltk>=3.9.2",
    "openai-whisper>=20250625",
    "snac>=1.2.1",
    "torchaudio>=2.8.0",
    "unsloth>=2025.11.2",
]
